Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odbahis {
    unsigned short  s_no;   
    short   type;           
    unsigned short  e_no;   
    struct {
        short   dummy;
        short   alm_grp;        
        short   alm_no;         
        char    axis_no;        
        char    year;           
        char    month;          
        char    day;            
        char    hour;           
        char    minute;         
        char    second;         
        char    dummy2;
        short   len_msg;        
        char    alm_msg[32];    
    } alm_his[10];
} ODBAHIS;  
typedef struct iodbsig {
    short   datano; 
    short   type;   
    struct {
        short   ent_no;     
        short   sig_no;     
        char    sig_name;   
        char    mask_pat;   
    } data[20];
} IODBSIG;  
typedef struct odbsys {
    short   addinfo ;       
    short   max_axis ;      
    char    cnc_type[2] ;   
    char    mt_type[2] ;    
    char    series[4] ;     
    char    version[4] ;    
    char    axes[2] ;       
} ODBSYS ;
typedef struct odbsys {
    short   dummy ;         
    char    max_axis[2] ;   
    char    cnc_type[2] ;   
    char    mt_type[2] ;    
    char    series[4] ;     
    char    version[4] ;    
    char    axes[2] ;       
} ODBSYS ;
typedef struct odbst {
    short dummy[2];     
    short aut;          
    short manual;       
    short run;          
    short edit;         
    short motion;       
    short mstb;         
    short emergency;    
    short write;        
    short labelskip;    
    short alarm;        
    short warning;      
    short battery;      
} ODBST ;
typedef struct odbst {
    short   dummy[2] ;  
    short   aut ;       
    short   run ;       
    short   motion ;    
    short   mstb ;      
    short   emergency ; 
    short   alarm ;     
    short   edit ;      
} ODBST ;
typedef struct odbst {
    short   hdck ;      
    short   tmmode ;    
    short   aut ;       
    short   run ;       
    short   motion ;    
    short   mstb ;      
    short   emergency ; 
    short   alarm ;     
    short   edit ;      
} ODBST ;
typedef struct odbalm {
    short   dummy[2] ;  
    short   data ;      
} ODBALM ;
typedef struct alminfo {
#if MAX_AXIS > 16
    union {
        struct {
            struct {
                long    axis ;
                short   alm_no ;
            } alm[5] ;
            long    data_end ;
        } alm1 ;
        struct {
            struct {
                long    axis ;
                short   alm_no ;
                short   msg_len ;
                char    alm_msg[32] ;
            } alm[5] ;
            long    data_end ;
        }alm2 ;
    } u ;
#else
    union {
        struct {
            struct {
                short   axis ;
                short   alm_no ;
            } alm[5] ;
            short   data_end ;
        } alm1 ;
        struct {
            struct {
                short   axis ;
                short   alm_no ;
                short   msg_len ;
                char    alm_msg[32] ;
            } alm[5] ;
            short   data_end ;
        }alm2 ;
    } u ;
#endif
} ALMINFO ; 
typedef struct alminfo2 {
    union {
        struct {
            struct {
                short   axis ;
                short   alm_no ;
            } alm[5] ;
            short   data_end ;
        } alm1 ;
        struct {
            struct {
                short   axis ;
                short   alm_no ;
                short   msg_len ;
                char    alm_msg[34] ;
            } alm[5] ;
            short   data_end ;
        }alm2 ;
    } u ;
} ALMINFO2 ; 
typedef struct odbmdl {
    short   datano;
    short   type;
    union {
        char    g_data;
        char    g_rdata[12];
        char    g_1shot;
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }aux;
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }raux1[25];
    }modal;
} ODBMDL ;
typedef struct odbmdl {
    short   datano;
    short   type;
    union {
        char    g_data;
        char    g_rdata[35];
        char    g_1shot[4];
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }aux;
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }raux1[27];
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }raux2[MAX_AXIS];
    }modal;
} ODBMDL ;
typedef struct odbdgn {
    short   datano ;    
    short   type ;      
    union {
        char    cdata ; 
        short   idata ;
        long    ldata ;
        REALDGN rdata ;
        char    cdatas[MAX_AXIS] ;
        short   idatas[MAX_AXIS] ;
        long    ldatas[MAX_AXIS] ;
        REALDGN rdatas[MAX_AXIS] ;
    } u ;
} ODBDGN ;
typedef struct odbdgn {
    short   datano ;    
    short   type ;      
    union {
        char    cdata ; 
        short   idata ;
        long    ldata ;
        char    cdatas[MAX_AXIS] ;
        short   idatas[MAX_AXIS] ;
        long    ldatas[MAX_AXIS] ;
    } u ;
} ODBDGN ;
typedef struct odbad {
    short   datano ;    
    short   type ;      
    char    data ;      
} ODBAD ;
typedef struct odbad {
    short   datano ;    
    short   type ;      
    short   data ;      
} ODBAD ;
typedef struct msg {
    short datano ;     
    short type ;       
    short char_num ;   
    char  data[129] ;  
} OPMSG ;               
typedef struct msg {
    short   datano ;    
    short   type ;      
    short   char_num ;  
    char    data[256] ; 
} OPMSG ;   
typedef struct opmsg3 {
    short   datano ;    
    short   type ;      
    short   char_num ;  
    char    data[256] ; 
} OPMSG3 ;   
typedef struct odbsysc {
    char        slot_no_p[16];
    char        slot_no_l[16];
    short       mod_id[16];
    short       soft_id[16];
    char        s_series[16][5];
    char        s_version[16][5];
    char        sys_id[16];
    char        sys_ser[5];
    char        sys_ver[5];
    char        basic_ver[5];
    char        opta1_ver[5];
    char        opta2_ver[5];
    char        opta3_ver[5];
    char        opta4_ver[5];
    char        sub_ver[5];
    char        opts1_ver[5];
    char        tcopt_ver[5];
    char        axis_ser[5];
    char        axis_ver[5];
    char        help_ser[5];
    char        help_ver[5];
    char        boot_ser[5];
    char        boot_ver[5];
    char        servo_ser[5];
    char        servo_ver[5];
    char        cmpl_ser[5];
    char        cmpl_ver[5];
    char        sral1_ser[5];
    char        sral1_ver[5];
    char        sral2_ser[5];
    char        sral2_ver[5];
    char        sral3_ser[5];
    char        sral3_ver[5];
    char        sral4_ser[5];
    char        sral4_ver[5];
    short       pcb_info[20];
    short       pcb_note[20][16];
} ODBSYSC ;
typedef struct odbsysc {
     char    slot_no_p[16];	
     char    slot_no_l[16];	
     short   mod_id[16];	
     short   soft_id[16];	
     char    s_series[16][5];	
     char    s_version[16][5];	
     char    dummy[16];		
     short   m_rom;		
     short   s_rom;		
     char    svo_soft[8];	
     char    pmc_soft[6];	
     char    lad_soft[6];	
     char    mcr_soft[8];	
     char    spl1_soft[6];	
     char    spl2_soft[6];	
     short   frmmin;		
     short   drmmin;		
     short   srmmin;		
     short   pmcmin;		
     short   sv1min;		
     short   sv3min;		
     short   sv5min;		
     short   sicmin;		
     short   posmin;		
     short   submin;		
     short   hdiio;		
     short   dummy2[32];	
} ODBSYSC;
typedef struct odbsysc {
    char    slot_no_p[16];
    char    slot_no_l[16];
    short   mod_id[16];
    short   soft_id[16];
    char    s_series[16][5];
    char    s_version[16][5];
    char    dummy[16];
    short   m_rom;
    short   s_rom;
    char    svo_soft[8];
    char    pmc_soft[6];
    char    lad_soft[6];
    char    mcr_soft[8];
    char    spl1_soft[6];
    char    spl2_soft[6];
    short   frmmin;
    short   drmmin;
    short   srmmin;
    short   pmcmin;
    short   crtmin;
    short   sv1min;
    short   sv3min;
    short   sicmin;
    short   posmin;
    short   drmmrc;
    short   drmarc;
    short   pmcmrc;
    short   dmaarc;
    short   iopt;
    short   hdiio;
    short   frmsub;
    short   drmsub;
    short   srmsub;
    short   sv5sub;
    short   sv7sub;
    short   sicsub;
    short   possub;
    short   hamsub;
    short   gm2gr1;
    short   crtgr2;
    short   gm1gr2;
    short   gm2gr2;
    short   cmmrb;
    short   sv5axs;
    short   sv7axs;
    short   sicaxs;
    short   posaxs;
    short   hanaxs;
    short   romr64;
    short   srmr64;
    short   dr1r64;
    short   dr2r64;
    short   iopio2;
    short   hdiio2;
    short   cmmrb2;
    short   romfap;
    short   srmfap;
    short   drmfap;
} ODBSYSC ;
typedef struct odbprs {
    short   datano;         
    short   type;           
    short   data_info[5];   
    long    rstr_bc;        
    long    rstr_m[35];     
    long    rstr_t[2];      
    long    rstr_s;         
    long    rstr_b;         
    long    dest[MAX_AXIS]; 
    long    dist[MAX_AXIS]; 
} ODBPRS;
typedef struct iodbsgnl {
    short   datano;     
    short   type;       
    short   mode;       
    short   hndl_ax;    
    short   hndl_mv;    
    short   rpd_ovrd;   
    short   jog_ovrd;   
    short   feed_ovrd;  
    short   spdl_ovrd;  
    short   blck_del;   
    short   sngl_blck;  
    short   machn_lock; 
    short   dry_run;    
    short   mem_prtct;  
    short   feed_hold;  
    short   manual_rpd; 
    short   dummy[2];   
} IODBSGNL;
typedef struct iodbsgnl {
    short   datano;     
    short   type;       
    short   mode;       
    short   hndl_ax;    
    short   hndl_mv;    
    short   rpd_ovrd;   
    short   jog_ovrd;   
    short   feed_ovrd;  
    short   spdl_ovrd;  
    short   blck_del;   
    short   sngl_blck;  
    short   machn_lock; 
    short   dry_run;    
    short   mem_prtct;  
    short   feed_hold;  
} IODBSGNL;
typedef struct iodbgnrl {
    short   datano; 
    short   type;   
    char    sgnal;  
} IODBGNRL;
typedef struct iodbrdna {
    short   datano;         
    short   type;           
    char    sgnl1_name[9];  
    char    sgnl2_name[9];  
    char    sgnl3_name[9];  
    char    sgnl4_name[9];  
    char    sgnl5_name[9];  
    char    sgnl6_name[9];  
    char    sgnl7_name[9];  
    char    sgnl8_name[9];  
} IODBRDNA;
typedef struct odberr {
    short   err_no ;
    short   err_dtno ;
} ODBERR ;
typedef struct odbparaif {
    unsigned short  info_no ;
    short   prev_no ;
    short   next_no ;
    struct {
        short   prm_no ;
        short   prm_type ;
    } info[10] ;    
} ODBPARAIF ;
FWLIBAPI short WINAPI cnc_rdalmhistry( unsigned short, unsigned short, unsigned short, unsigned short, ODBAHIS * ) ;
FWLIBAPI short WINAPI cnc_rdhissgnl( unsigned short, IODBSIG * ) ;
FWLIBAPI short WINAPI cnc_wrhissgnl( unsigned short, IODBSIG * ) ;
FWLIBAPI short WINAPI cnc_sysinfo( unsigned short, ODBSYS * ) ;
FWLIBAPI short WINAPI cnc_statinfo( unsigned short, ODBST * ) ;
FWLIBAPI short WINAPI cnc_alarm( unsigned short, ODBALM * ) ;
FWLIBAPI short WINAPI cnc_rdalminfo( unsigned short, short, short, short, ALMINFO * ) ;
FWLIBAPI short WINAPI cnc_modal( unsigned short, short, short, ODBMDL * ) ;
FWLIBAPI short WINAPI cnc_diagnoss( unsigned short, short, short, short, ODBDGN * ) ;
FWLIBAPI short WINAPI cnc_diagnosr( unsigned short, short *, short, short *, short *, void * ) ;
FWLIBAPI short WINAPI cnc_adcnv( unsigned short, short, short, ODBAD * ) ;
FWLIBAPI short WINAPI cnc_rdopmsg( unsigned short, short, short, OPMSG * ) ;
FWLIBAPI short WINAPI cnc_rdopmsg3( unsigned short, short, short *, OPMSG3 * ) ;
FWLIBAPI short WINAPI cnc_sysconfig( unsigned short, ODBSYSC * ) ;
FWLIBAPI short WINAPI cnc_rdprstrinfo( unsigned short, ODBPRS * ) ;
FWLIBAPI short WINAPI cnc_rdopnlsgnl( unsigned short, short, IODBSGNL * ) ;
FWLIBAPI short WINAPI cnc_wropnlsgnl( unsigned short, IODBSGNL * ) ;
FWLIBAPI short WINAPI cnc_rdopnlgnrl( unsigned short, short, IODBGNRL * ) ;
FWLIBAPI short WINAPI cnc_wropnlgnrl( unsigned short, IODBGNRL * ) ;
FWLIBAPI short WINAPI cnc_rdopnlgsname( unsigned short, short, IODBRDNA * ) ;
FWLIBAPI short WINAPI cnc_wropnlgsname( unsigned short, IODBRDNA * ) ;
FWLIBAPI short WINAPI cnc_getdtailerr( unsigned short, ODBERR * ) ;
FWLIBAPI short WINAPI cnc_rdparainfo( unsigned short, short, unsigned short, ODBPARAIF * ) ;
FWLIBAPI short WINAPI cnc_exaxisname( unsigned short, short, short *, char (*)[MAX_AXISNAME] );
FWLIBAPI short WINAPI cnc_exaxisname2( unsigned short, short, short, short *, char (*)[MAX_AXISNAME] );
FWLIBAPI short WINAPI cnc_rdpm_mcnitem( unsigned short, short, short *, char (*)[62] );
FWLIBAPI short WINAPI cnc_wrpm_mcnitem( unsigned short, short, short, char (*)[62] );
FWLIBAPI short WINAPI cnc_rdpm_cncitem( unsigned short, short, short *, char (*)[62]);